OVERFLOW FIXED FINALLY!!!

--- a/src/mainStyles.css
+++ b/src/mainStyles.css
@@ -151,7 +151,6 @@ nav {
 main {
     display: grid;
     align-items: center;
-    overflow: hidden;
 }
 
 /* ///////////////////////////////////// */
@@ -290,12 +289,17 @@ main {
 .invisible {
     visibility: collapse;
 
-    width: 0;
-    height: 0;
+    opacity: 0;
+
+    font-size: 0 !important;
+}
+
+.invisible > *{
+    visibility: collapse;
 
     opacity: 0;
 
-    font-size: 0;
+    font-size: 0 !important;
 }
 
 /* ///////////////////////////////////// */
